# FinopsENV

./: .gitignore  Dockerfile  README.md  app.py  easy_logs.txt  environment.py  graders.py  hard_logs.txt  inference.py  medium_logs.txt  openenv.yaml  pyproject.toml  requirements.txt  schemas.py
server/: app.py
