[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-finops-agent"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for FinOps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:start"
